Finally changed the layout from Relative to Table!  You can actually cut, paste, and move things without breaking the world.  Put placeholders in for the Fraction specific rare counters.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">Galdorcraft Counter</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="increment_fracture_rare">Increment Fracture Specific Rare Counter</string>
+    <string name="increment_normal_rare">Increment Normal Rare</string>
 
 </resources>
